# mumowrk

./: Cargo.toml  LICENSE  README.md  config.example.yml
src/: cli.rs  main.rs  notify.rs  sway_commands.rs
src/config/: config.rs  mod.rs  monitor_group.rs
src/sway/: commands.rs  mod.rs  utils.rs
src/workspaces/: init.rs  initialize.rs  mod.rs  move_container.rs  organize.rs  print.rs  swap_groups.rs  switch.rs  utils.rs  workspace_id.rs
