[package]
name = "mumowrk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
itertools = "0.14.0"
regex = "1.11.1"
swayipc = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.138"
shellexpand = "3.1.0"
rand = "0.9.0"
dbus = "0.9.7"
